--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
-@import url(/style/reset.css);
-@import url(/style/contato.css);
+@import url(reset.css);
+@import url(contato.css);
 
 * {
     margin: 0;
