--- a/contato.css
+++ b/contato.css
@@ -15,10 +15,14 @@
 h2 {
     font-weight: 600;
     font-size: 3rem;
+    text-align: center;
+    padding: 2rem;
 }
 
 p {
+    font-family: var(--cor-texto-destaque);
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .links-redes-sociais {
@@ -94,7 +98,7 @@ textarea {
     height: 200px;
 }
 
-button {
+.botao {
     font-family: var(--font-family-texto);
     width: 100%;
     height: 30px;
