--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 @import url(reset.css);
 @import url(contato.css);
+@import url(projetos.css);
 
 * {
     margin: 0;
@@ -34,15 +35,22 @@ nav {
     font-family: var(--fonte-family-texto);
     font-size: 1.5rem;
     font-weight: 800;
+
+    
 }
 
 .nav-titulo{
     width: 50%;    
     font-family: var(--font-family-titulo); 
+    color: var(--cor-primaria);
 }
 
 .menu-destaque{
     color: var(--cor-primaria);
+
+    &:visited {
+        color: var(--cor-primaria);
+    }
 }
 
 .nav-menu{
