--- a/projetos.css
+++ b/projetos.css
@@ -1,4 +1,25 @@
+
+
 .texto-destaque {
     font-weight: 600;
+}
+
+.todos-projetos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+}
+
+#projetos {
+    width: 100vw;
+    padding: 3rem;
+}
+
+h3 {
+    font-weight: 600;
+    font-size: 2rem;
+    text-align: center;
+    padding: 3rem;
 }
 
