--- a/style/projetos.css
+++ b/style/projetos.css
@@ -1,5 +1,3 @@
-
-
 .texto-destaque {
     font-weight: 600;
 }
@@ -19,7 +17,21 @@
 h3 {
     font-weight: 600;
     font-size: 2rem;
-    text-align: center;
-    padding: 3rem;
+}
+
+h4 {
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+h5 {
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
+.projeto-titulo {
+    font-weight: 600;
+    font-size: 2rem;
+    padding: 2rem;
 }
 
