--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,7 @@ body {
     height: 100vh;
     width: 100vw;
     font-family: var(--font-family-texto);
+    /* align-content: center; */
 }
 
 nav {
