--- a/style/style.css
+++ b/style/style.css
@@ -23,11 +23,12 @@
 
 body {
     height: 100vh;
-    width: 100vw;
+    max-width: 100%;
+    overflow-x: hidden;
     font-family: var(--font-family-texto);
 }
 
-nav {
+.menu {   /* estava como nav */
     display: flex;
     align-items: center;
     width: 100vw;
@@ -93,11 +94,19 @@ nav li {
     text-align: center;
 }
 
-/* .dropbtn{
-    display: none;
-} */
-
 @media (max-width: 767.98px) {
+
+    nav {
+        padding: 0;
+        display: flex;
+        justify-content: center;
+    }
+
+    .menu{
+        display: flex;
+        justify-content: center;
+    }
+
 
     .nav-titulo h1 {
         display: none;
@@ -123,5 +132,5 @@ nav li {
         text-align: center;
         text-wrap: wrap;
         margin: 4%;
-    }     
+    }
 }
