--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,7 @@
 body {
     height: 100vh;
     max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: hidden; /*propriedade para evitar rolagem horizontal*/
     font-family: var(--font-family-texto);
 }
 
