Revert "rolagem horizontal retirada"
This reverts commit 14f4dd9439a8aaa9385b33790fbd30c9b18a6835.

--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,7 @@
 body {
     height: 100vh;
     max-width: 100%;
-    overflow-x: hidden; /*propriedade para evitar rolagem horizontal*/
+    overflow-x: hidden;
     font-family: var(--font-family-texto);
 }
 
