--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,7 @@ body {
     height: 100vh;
     width: 100vw;
     font-family: var(--font-family-texto);
+    /* align-content: center; */
 }
 
 nav {
@@ -41,13 +42,13 @@ nav {
     background: white;
 }
 
-.nav-titulo {
-    width: 50%;
-    font-family: var(--font-family-titulo);
+.nav-titulo{
+    width: 50%;    
+    font-family: var(--font-family-titulo); 
     color: var(--cor-primaria);
 }
 
-.menu-destaque {
+.menu-destaque{
     color: var(--cor-primaria);
 
     &:visited {
@@ -55,12 +56,12 @@ nav {
     }
 }
 
-.nav-menu {
+.nav-menu{
     width: 50%;
     color: var(--cor-secundaria);
 }
 
-a {
+a{
     text-decoration: none;
     color: var(--cor-secundaria);
 }
@@ -69,7 +70,7 @@ nav a:visited {
     color: var(--cor-secundaria);
 }
 
-nav a:hover {
+nav a:hover{
     color: var(--cor-primaria);
     cursor: pointer;
 }
@@ -84,44 +85,3 @@ nav li {
     list-style: none;
 }
 
-.imagem-projetos {
-    width: 1000px;
-    height: 619px;
-}
-
-.secao-projetos {
-    text-align: center;
-}
-
-/* .dropbtn{
-    display: none;
-} */
-
-@media (max-width: 767.98px) {
-
-    .nav-titulo h1 {
-        display: none;
-    }
-
-    .secao-projetos {
-        padding: 0;
-    }
-
-    .imagem-projetos{
-        width: 90%;
-        height: fit-content;
-    }
-    
-    .todos-projetos {
-        margin: 4%;
-        padding: 0;
-    }
-
-    .projetos-texto {        
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        text-wrap: wrap;
-        margin: 4%;
-    }     
-}
