--- a/style/projetos.css
+++ b/style/projetos.css
@@ -14,6 +14,9 @@
 }
 
 #projetos {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     width: 100vw;
     padding: 2rem;
 }
@@ -36,5 +39,4 @@ h5 {
 .projeto-titulo {
     font-weight: 600;
     font-size: 2rem;
-    padding: 2rem;
 }
