--- a/style/projetos.css
+++ b/style/projetos.css
@@ -2,7 +2,7 @@
     font-weight: 600;
 }
 
-.todos-projetos {
+.projeto {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,7 +13,7 @@
     height: 619px;
 }
 
-#projetos {
+.secao-projetos {
     display: flex;
     flex-direction: column;
     gap: 2rem;
