--- a/style/style.css
+++ b/style/style.css
@@ -5,10 +5,33 @@
 @import url(projetos.css);
 @import url(sobre.css);
 
+
+/* Estilizando a barra de rolagem */
+/* ::-webkit-scrollbar {
+    width: 2px;
+    height: 2px;
+} */
+
+
+/* ::-webkit-scrollbar-track {
+    background: transparent;
+} */
+
+
+/* ::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+} */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: 1px solid red;
 }
 
 :root {
@@ -23,15 +46,14 @@
 
 body {
     height: 100vh;
-    width: 100vw;
+    width: auto;
     font-family: var(--font-family-texto);
-    /* align-content: center; */
 }
 
 nav {
     display: flex;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     padding: 2rem;
     font-family: var(--fonte-family-texto);
     font-size: 1.5rem;
@@ -41,13 +63,13 @@ nav {
     background: white;
 }
 
-.nav-titulo{
-    width: 50%;    
-    font-family: var(--font-family-titulo); 
+.nav-titulo {
+    width: 50%;
+    font-family: var(--font-family-titulo);
     color: var(--cor-primaria);
 }
 
-.menu-destaque{
+.menu-destaque {
     color: var(--cor-primaria);
 
     &:visited {
@@ -55,12 +77,12 @@ nav {
     }
 }
 
-.nav-menu{
+.nav-menu {
     width: 50%;
     color: var(--cor-secundaria);
 }
 
-a{
+a {
     text-decoration: none;
     color: var(--cor-secundaria);
 }
@@ -69,7 +91,7 @@ nav a:visited {
     color: var(--cor-secundaria);
 }
 
-nav a:hover{
+nav a:hover {
     color: var(--cor-primaria);
     cursor: pointer;
 }
@@ -83,4 +105,3 @@ nav ul {
 nav li {
     list-style: none;
 }
-
