--- a/style/contato.css
+++ b/style/contato.css
@@ -1,62 +1,69 @@
-.secao-contato  {
+/* Estilos globais */
+body {
+    font-family: var(--fonte-texto);
+}
+
+.secao-contato {
     width: 100vw;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.contato-main{
+.contato-main {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1.5rem;
+    text-align: center;
 }
 
 h2 {
     font-weight: 600;
-    font-size: 3rem;
-    text-align: center;
+    font-size: 3.5rem;
     padding: 2rem;
+    text-align: center;
 }
 
 p {
-    font-family: var(--cor-texto-destaque);
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+    line-height: 30px;
+    color: var(--cor-texto-destaque);
 }
 
-.paragrafo-destaque{
-    text-align: center;
-}
-
+/* Links de redes sociais */
 .links-redes-sociais {
     display: flex;
     gap: 3.5rem;
-    font-size: 1.5rem;
-    padding: 3rem;    
-}
-
-.links-redes-sociais img{
-    width: 20px;
+    font-size: 1.25rem;
+    padding: 3rem;
 }
 
 .links-redes-sociais a {
     display: flex;
+    align-items: center;
     gap: 6px;
-    color: var(--cor-texto-destaque);
+    color: var(--cor-texto);
     padding: 0.5rem;
+    width: 120px;
+    height: 48px;
     border-radius: 8px;
-    font-weight: 600;
-    background: var(--cor-terciaria);
-    &:hover{
-        background-color: var(--cor-hover);
-    }
+    font-weight: 500;
+    background: var(--cor-btn);
+    transition: background-color 0.3s ease-in-out;
 }
 
-#contato hr {
+.links-redes-sociais a:hover {
+    background-color: var(--cor-btn-hover);
+}
+
+/* Linha vertical de separação */
+.linha-vertical {
     height: 400px;
     border: 1px solid var(--cor-secundaria);
 }
 
+/* Formulário */
 .contato-formulario {
     display: flex;
     flex-direction: column;
@@ -67,52 +74,73 @@ form {
     display: flex;
     flex-direction: column;
     padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
+    background-color: var(--cor-fundo);
     gap: 0.5rem;
 }
 
-input {
-    padding: 4px 10px 4px 0;
+input, textarea {
+    padding: 0.5rem;
     width: 100%;
-    border: none;
-    border-bottom: 2px solid #ccc;
+    border: 2px solid var(--cor-btn);
+    border-radius: 8px;
     outline: none;
     transition: border-color 0.3s ease-in-out;
+}
 
-    &:focus {
-      border-bottom: 2px solid #3f51b5; /* Cor de foco */
-    } 
-  
-    &::placeholder {
-      color: transparent;
-    }
-  
-    &:placeholder-shown + label {
-      top: 10px;
-      font-size: 16px;
-      color: #aaa;
-    }
+input:focus, textarea:focus {
+    border-color: var(--cor-btn-hover);
 }
 
 textarea {
     resize: none;
-    width: 100%;
     height: 200px;
 }
 
+/* Botão */
 .botao {
-    font-family: var(--font-family-texto);
     width: 100%;
-    height: 30px;
+    height: 40px;
     border: none;
     border-radius: 8px;
-    background: var(--cor-terciaria);
-    font-weight: 600;
-    text-transform: uppercase;
-    font-size: 1rem;
+    background: var(--cor-btn);
+    font-weight: 500;
+    font-size: 1.25rem;
     cursor: pointer;
-    &:hover {
-        background-color: var(--cor-hover);
+    transition: background-color 0.3s ease-in-out;
+}
+
+.botao:hover {
+    background-color: var(--cor-btn-hover);
+}
+
+/* Responsivo */
+@media (max-width: 992px) {
+
+    
+    .linha-vertical {
+        display: none;
+    }
+
+    .secao-contato {
+        flex-direction: column;
+        padding-top: 0;
+    }
+
+    .contato-formulario {
+        width: 75%;
+    }
+
+    .contato-main {
+        display: none;
+    }
+
+    textarea {
+        height: 120px;
+    }
+
+    .links-redes-sociais a {
+        width: 28px;
+        height: 28px;
+        padding: 0;
     }
 }
