--- a/style/sobre.css
+++ b/style/sobre.css
@@ -1,20 +1,19 @@
-.apresentacao{
-    margin: 5% 5%;
-    display: flex; 
+.apresentacao {
+    margin: 5% 0;
+    display: flex;
     align-items: center;
-    justify-content:space-between; 
-    gap: 4rem;
+    justify-content: space-evenly;
 }
 
 .apresentacao-conteudo {
     width: 50%;
     display: flex;
-    flex-direction: column; 
-    gap: 2.5rem; 
+    flex-direction: column;
+    gap: 2.5rem;
 }
 
-.foto-sobre{
-    width: 40%;
+.foto-sobre {
+    width: 30%;
 }
 
 .apresentacao-conteudo-div {
@@ -23,15 +22,49 @@
     gap: 2rem;
 }
 
-.apresentacao-educacao{
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-}
-
-.apresentacao-conteudo-educacao{
+.apresentacao-conteudo-educacao {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
+.container-chip{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    width: 300px;
+}
+
+.chip {
+    display: inline-block;
+    width: fit-content;
+    padding: 0 8px;
+    height: 24px;
+    font-size: 1rem;
+    line-height: 24px;
+    border-radius: 8px;
+    background-color: var(--cor-secundaria);
+  }
+
+  @media (max-width: 992px){
+    .apresentacao{
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+    }
+
+    .apresentacao-conteudo{
+        width: 75%;
+        order: 2;
+    }
+
+    .foto-sobre{
+        order: 1;
+    }
+
+    .container{
+        display: flex;
+    }
+
+    
+  }
