--- a/style/style.css
+++ b/style/style.css
@@ -22,12 +22,8 @@
     --fonte-texto: "Roboto Condensed", sans-serif;
 }
 
-html {
-    font-size: 1rem; /* 1rem = 16px */
-  }
-
 body {
-    height: 100%;
+    height: 100vh;
     width: auto;
     background-color: var(--cor-fundo);
     font-family: var(--fonte-texto);
@@ -75,11 +71,6 @@ footer{
 
 @media (max-width: 992px){
 
-    /* diminui o tamanho dos rem tudo ass: jhonata */
-    html { 
-        font-size: 10px; /* 1rem = 10px */
-      }
-
     .nav-titulo .menu-destaque{
         display: none;
     }
@@ -110,6 +101,6 @@ footer{
     .icones-rodape{
         display: flex;
         justify-content: center;
-        gap: 8px;
+        gap: 20px;
     }
 }
