--- a/style/style.css
+++ b/style/style.css
@@ -15,9 +15,9 @@
     --cor-fonte: #141414;
     --cor-fundo: #86A69D;
     --cor-footer: #65a694;
-    --cor-btn:#F2C6C2;
-    --cor-btn-hover:#F28585;
-    --cor-secundaria: #F2E8DF;
+    --cor-btn: #bcbcbc;
+    --cor-btn-hover: #6f6f6f;
+    --cor-secundaria: #bcbcbc;
     --fonte-titulo: "Poppins", sans-serif;
     --fonte-texto: "Roboto Condensed", sans-serif;
 }
@@ -66,43 +66,107 @@ nav li {
     list-style: none;
 }
 
-footer{
+footer {
     display: none;
 }
 
-@media (max-width: 992px){
+.descricao {
+    text-align: center;
+}
 
-    .nav-titulo .menu-destaque{
+/* Cards */
+
+.container-cards {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 5%;
+
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    height: 300px;
+    width: 280px;
+    background-color: var(--cor-secundaria);
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card img {
+    height: 200px;
+}
+
+.container {
+    height: 100px;
+    align-content: center;
+    text-align: center;
+    padding: 2px 16px;
+    background-color: var(--cor-secundaria);
+}
+
+.descricao-card {
+    text-align: center;
+    align-items: center;
+    font-weight: 500;
+}
+
+@media (max-width: 992px) {
+
+    .nav-titulo .menu-destaque {
         display: none;
     }
 
-    .nav-menu{
+    .nav-menu {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
     }
 
-    footer{
+    footer {
         display: block;
         width: 100%;
         position: absolute;
     }
 
-    .rodape{
+    .rodape {
         display: flex;
         flex-direction: column;
         background-color: var(--cor-footer);
         padding: 8px 0;
     }
 
-    .texto-rodape{
+    .texto-rodape {
         text-align: center;
     }
 
-    .icones-rodape{
+    .icones-rodape {
         display: flex;
         justify-content: center;
         gap: 20px;
     }
+
+    /* Cards */
+
+    .container-cards {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+        margin-bottom: 5%;
+    }
+
+    .container {
+        height: 100px;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: center;
+        padding: 2px 16px;
+        background-color: var(--cor-secundaria);
+    }
+    
 }
