--- a/style/sobre.css
+++ b/style/sobre.css
@@ -1,7 +1,6 @@
 .apresentacao {
     margin: 5% 0;
     display: flex;
-    align-items: center;
     justify-content: space-evenly;
 }
 
@@ -50,6 +49,9 @@
     .apresentacao{
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
         row-gap: 20px;
     }
 
