--- a/style/style.css
+++ b/style/style.css
@@ -63,6 +63,17 @@ nav li {
     list-style: none;
 }
 
+.secao-projetos {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+h3 {
+    font-weight: 600;
+    font-size: 2rem;
+}
+
 footer {
     display: none;
 }
@@ -164,5 +175,24 @@ footer {
         padding: 2px 16px;
         background-color: var(--cor-secundaria);
     }
+
+    h2{
+        font-size: 2.18rem;
+    }
+
+    h3{
+        font-size: 1.5rem;
+    }
+
+    h4{
+        font-size: 1.25;
+    }
+
+    p{
+        font-size: 1rem;
+    }
     
+    .projetos{
+        margin: 2%;
+    }
 }
