--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 @import url(reset.css);
-@import url(projetos.css);
 @import url(sobre.css);
 @import url(contato.css);
 
@@ -27,6 +26,7 @@ body {
     font-family: var(--fonte-texto);
 }
 
+/* Menu de navegação */
 nav {
     display: flex;
     align-items: center;
