--- a/style/sobre.css
+++ b/style/sobre.css
@@ -21,11 +21,7 @@
     gap: 2rem;
 }
 
-.apresentacao-conteudo-educacao {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
+/* Chips */
 
 .container-chip{
     display: flex;
