--- a/style/style.css
+++ b/style/style.css
@@ -65,6 +65,7 @@ nav li {
 }
 
 .secao-projetos {
+    height: 100%;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -136,9 +137,10 @@ footer {
         width: 100%;
     }
 
-    footer {
+    /* footer {
         display: block;
         width: 100%;
+        height: 100%;
     }
 
     .rodape {
@@ -156,7 +158,7 @@ footer {
         display: flex;
         justify-content: center;
         gap: 20px;
-    }
+    } */
 
     /* Cards */
 
