--- a/style/contato.css
+++ b/style/contato.css
@@ -1,7 +1,7 @@
 .secao-contato {
-    height: min-content;
+    height: 100dvh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
