--- a/style/style.css
+++ b/style/style.css
@@ -137,10 +137,10 @@ footer {
         width: 100%;
     }
 
-    /* footer {
+    footer {
         display: block;
         width: 100%;
-        height: 100%;
+        order: 3;
     }
 
     .rodape {
@@ -158,7 +158,7 @@ footer {
         display: flex;
         justify-content: center;
         gap: 20px;
-    } */
+    }
 
     /* Cards */
 
